snapshots/serde/serde/src/lib.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 349
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 19
    total_operators: 800
    unique_operands: 206
    total_operands: 605
    length: 1405
    estimated_program_length: 1664.13
    purity_ratio: 1.184
    vocabulary: 225
    volume: 10978.363
    difficulty: 27.9
    level: 0.036
    effort: 306301.645
    time: 17016.758
    bugs: 1.515
  loc:
    sloc: 349
    ploc: 185
    lloc: 0
    cloc: 127
    blank: 38
    sloc_average: 349
    ploc_average: 185
    lloc_average: 0
    cloc_average: 127
    blank_average: 38
    sloc_min: 349
    sloc_max: 349
    cloc_min: 127
    cloc_max: 127
    ploc_min: 185
    ploc_max: 185
    lloc_min: 0
    lloc_max: 0
    blank_min: 38
    blank_max: 38
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 1840
    average: 1840
    min: 1840
    max: 1840
  mi:
    original: 27.539
    sei: -31.901
    visual_studio: 16.104
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
