snapshots/serde/serde/src/macros.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 236
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 39
    total_operators: 608
    unique_operands: 68
    total_operands: 115
    length: 723
    estimated_program_length: 620.078
    purity_ratio: 0.858
    vocabulary: 107
    volume: 4874.081
    difficulty: 32.978
    level: 0.03
    effort: 160737.144
    time: 8929.841
    bugs: 0.985
  loc:
    sloc: 236
    ploc: 123
    lloc: 0
    cloc: 111
    blank: 2
    sloc_average: 236
    ploc_average: 123
    lloc_average: 0
    cloc_average: 111
    blank_average: 2
    sloc_min: 236
    sloc_max: 236
    cloc_min: 111
    cloc_max: 111
    ploc_min: 123
    ploc_max: 123
    lloc_min: 0
    lloc_max: 0
    blank_min: 2
    blank_max: 2
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 1118
    average: 1118
    min: 1118
    max: 1118
  mi:
    original: 38.099
    sei: -67.232
    visual_studio: 22.28
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
