snapshots/serde/serde/src/std_error.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 48
kind: unit
spaces:
  - name: Error
    start_line: 43
    end_line: 48
    kind: trait
    spaces:
      - name: source
        start_line: 45
        end_line: 47
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 7
            total_operators: 9
            unique_operands: 6
            total_operands: 6
            length: 15
            estimated_program_length: 35.161
            purity_ratio: 2.344
            vocabulary: 13
            volume: 55.507
            difficulty: 3.5
            level: 0.286
            effort: 194.273
            time: 10.793
            bugs: 0.011
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 20
            average: 20
            min: 20
            max: 20
          mi:
            original: 132.087
            sei: 114.962
            visual_studio: 77.244
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 10
        total_operators: 14
        unique_operands: 8
        total_operands: 9
        length: 23
        estimated_program_length: 57.219
        purity_ratio: 2.488
        vocabulary: 18
        volume: 95.908
        difficulty: 5.625
        level: 0.178
        effort: 539.484
        time: 29.971
        bugs: 0.022
      loc:
        sloc: 6
        ploc: 5
        lloc: 0
        cloc: 1
        blank: 0
        sloc_average: 3
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0.5
        blank_average: 0
        sloc_min: 3
        sloc_max: 6
        cloc_min: 0
        cloc_max: 1
        ploc_min: 3
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 29
        average: 14.5
        min: 9
        max: 20
      mi:
        original: 117.784
        sei: 96.497
        visual_studio: 68.879
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 0
        interface_wmc_sum: 1
        total: 1
      npm:
        class_npm_sum: 0
        interface_npm_sum: 1
        class_methods: 0
        interface_methods: 1
        class_coa: 0
        interface_coa: 1
        total: 1
        total_methods: 1
        coa: 1
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    value: 1
    average: 3
    min: 1
    max: 1
    modified:
      sum: 3
      value: 1
      average: 3
      min: 1
      max: 1
  halstead:
    unique_operators: 14
    total_operators: 19
    unique_operands: 9
    total_operands: 12
    length: 31
    estimated_program_length: 81.832
    purity_ratio: 2.64
    vocabulary: 23
    volume: 140.23
    difficulty: 9.333
    level: 0.107
    effort: 1308.817
    time: 72.712
    bugs: 0.04
  loc:
    sloc: 48
    ploc: 6
    lloc: 0
    cloc: 41
    blank: 1
    sloc_average: 16
    ploc_average: 2
    lloc_average: 0
    cloc_average: 13.667
    blank_average: 0.333
    sloc_min: 3
    sloc_max: 48
    cloc_min: 0
    cloc_max: 41
    ploc_min: 3
    ploc_max: 6
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 1
  nom:
    functions: 1
    closures: 0
    functions_average: 0.333
    closures_average: 0
    total: 1
    average: 0.333
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 38
    average: 12.667
    min: 9
    max: 20
  mi:
    original: 81.891
    sei: 91.935
    visual_studio: 47.89
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 1
    total: 1
  npm:
    class_npm_sum: 0
    interface_npm_sum: 1
    class_methods: 0
    interface_methods: 1
    class_coa: 0
    interface_coa: 1
    total: 1
    total_methods: 1
    coa: 1
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
